++ observation progress bar per node panel

--- a/public/templates/main.css
+++ b/public/templates/main.css
@@ -29,6 +29,10 @@
 .genericpanel:hover{
     filter: brightness(115%);
 }
+.genericpanelheading{
+    display : flex;
+    justify-content: space-between;
+}
 
 a.panel {
     text-decoration: none;
