--- a/public/templates/main.css
+++ b/public/templates/main.css
@@ -33,6 +33,20 @@
     display : flex;
     justify-content: space-between;
 }
+progress {
+    border-radius: 5px; 
+    width: 150px;
+    height: 13px;
+    box-shadow: 1px 1px 4px rgba( 0, 0, 0, 0.2 );
+  }
+  progress::-webkit-progress-bar {
+    border-radius: 5px; 
+    background-color: white;
+  }
+  progress::-webkit-progress-value {
+    border-radius: 5px; 
+    background-color: rgb(22, 228, 22);
+  }
 
 a.panel {
     text-decoration: none;
