* inititial VLA adjustments

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ATA Pipeline Monitor</title>
+	<title>VLA Pipeline Monitor</title>
 	<link href = "./templates/main.css" rel = "stylesheet" type="text/css">
 </head>
 <body>
@@ -339,10 +339,8 @@
 	
 	ReactDOM.render(<Page 
 			instance_nodehostnames_dicts={[
-				{"instancenum":0, "nodehostnames":["seti-node1","seti-node2","seti-node3","seti-node4"]},
-				{"instancenum":1, "nodehostnames":["seti-node1","seti-node2","seti-node3","seti-node4"]},
-				{"instancenum":0, "nodehostnames":["seti-node5","seti-node6","seti-node7","seti-node8"]},
-				{"instancenum":1, "nodehostnames":["seti-node5","seti-node6","seti-node7","seti-node8"]},
+				{"instancenum":0, "nodehostnames":["cosmic-gpu-0"]},
+				{"instancenum":1, "nodehostnames":["cosmic-gpu-0"]},
 			]}
 			rowcolors={["#456789", "#353839"]}
 			node_count={8}
