--- a/public/templates/node.html
+++ b/public/templates/node.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>
-			ATA Pipeline Monitor
+			VLA Pipeline Monitor
 		</title>
 	</head>
 	<link href = "./templates/node.css" rel = "stylesheet" type="text/css">
