--- a/public/templates/main.css
+++ b/public/templates/main.css
@@ -13,6 +13,8 @@
     display: flex;
     /* flex-direction: column; */
     justify-content: space-evenly;
+    padding-left:125px;
+    padding-right:5px;
 }
 
 .genericpanel {
@@ -32,6 +34,19 @@
 .genericpanelheading{
     display : flex;
     justify-content: space-between;
+}
+.side-navigation-bar{
+    position:fixed;
+    top:0;
+    left:0;
+    width:120px;
+    height:100%;
+    background-color:rgb(97, 97, 97);
+    text-align: center;
+    color:white;
+}
+.nav-item:checked{
+    background-color: grey;
 }
 progress {
     border-radius: 5px; 
@@ -65,4 +80,11 @@ a.panel {
     width: 26ch;
     text-align: 'left';
     word-wrap: break-word;
+}
+.expand_collapse_link{
+    cursor: pointer;
+}
+.expand_collapse_link:hover,
+.expand_collapse_link:active{
+    color:aqua;
 }
