--- a/public/templates/main.css
+++ b/public/templates/main.css
@@ -1,13 +1,14 @@
+body {
+    margin: 0px;
+}
+
 .page {
     background-color: #123456;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    position: absolute;
     min-width: 100%;
     min-height: 100%;
-    top: 0;
-    left: 0;
 }
 .instancespanel{
     display: flex;
@@ -127,4 +128,8 @@ a.panel {
 .expand_collapse_link:hover,
 .expand_collapse_link:active{
     color:aqua;
+}
+
+.no_select {
+    cursor: default ;
 }
